# plugbar

./: .travis.yml  Cargo.toml  README.md  makefile
plugins/: Cargo.toml  example_schedule.yml
plugins/src/: time.rs
plugins/src/course/: course.rs  main.rs
timetable/: Cargo.toml
timetable/src/: time.rs
